--- a/更新说明.md
+++ b/更新说明.md
@@ -1,3 +1,6 @@
+# 2022/2/16 更新说明
+修复闪烁总览上白名不闪烁的问题，现在罪犯和嫌疑人也会闪烁。修复2021/10/17更新中战争盟军的变化没有正确反映的问题。
+
 # 2022/2/6 更新说明
 QOL更新2：
 精细分开了残骸和无人机显示的图标总览，方便服务了ctrl框选和跳残骸等不同目的。
