--- a/更新说明.md
+++ b/更新说明.md
@@ -11,23 +11,19 @@ QOL更新7：更新了低安势力战争跳桥。
 QOL更新6：更新了势力战争的显示，修改了某些预设的名称。
 
 # 2023/3/15 更新说明
-21.03版本更新：删除了一些不太可能用到的预设；优化了目标和友军预设的命名方式；添加了会战专用的总览框架。
+21.03更新：删除了一些不太可能用到的预设；优化了目标和友军预设的命名方式；添加了会战专用的总览框架。
 
 # 2023/3/14 更新说明
 QOL更新5：更新了非HTML格式TAB的总览框架。
 
 # 2023/2/14 更新说明
-21.02版本更新：跟随光子UI正式上线，优化了预设TAB的column设置。
+21.02更新：跟随光子UI正式上线，优化了预设TAB的column设置。
 
 # 2023/1/27 更新说明
-删除了宣战同盟在友军TAB上的显示。
-
-QOL更新4：
-调整了colortag的排序。
+QOL更新4：删除了宣战同盟在友军TAB上的显示，调整了colortag的排序。
 
 # 2022/10/8 更新说明
-QOL更新3：
-修复了几个预设的命名错误。
+QOL更新3：修复了几个预设的命名错误。
 
 # 2022/8/6 更新说明
 精调了宣战同盟在各个必要TAB上的显示。
@@ -36,21 +32,15 @@ QOL更新3：
 修复闪烁总览上白名不闪烁的问题，现在罪犯和嫌疑人也会闪烁。修复2021/10/17更新中战争盟军的变化没有正确反映的问题。
 
 # 2022/2/6 更新说明
-QOL更新2：
-精细分开了残骸和无人机显示的图标总览，方便服务了ctrl框选和跳残骸等不同目的。
+QOL更新2：精细分开了残骸和无人机显示的图标总览，方便服务了ctrl框选和跳残骸等不同目的。
 
 # 2022/2/5 更新说明
-
-QOL更新：
-调整了残骸的显示，移动反诱导的分类。
-添加了旗舰异常信标。
+QOL更新：调整了残骸的显示，移动反诱导的分类。添加了旗舰异常信标。
 
 # 2021/10/17 更新说明
-
 调整了战争盟军的旗标和优先级，现在是白星浅蓝底，注意非战时规避。
 
 # 2021/8/20 更新说明
-
 1. 核心
 
     精简了D-Scan预设，移除了信标、纪念碑、轨道、ESS等，添加了POS、深渊痕迹等。向航行和图标预设里添加了关键内容，包括：POS等。
