--- a/更新说明.md
+++ b/更新说明.md
@@ -1,5 +1,5 @@
 # 2023/11/23 更新说明
-QOL更新8：从“只有舰船”预设中删除了蛋的显示。
+QOL更新8：从“作战：只有舰船”预设中删除了蛋的显示。
 
 # 2023/11/20 更新说明
 [Havoc更新2](https://forums.winterco.org/t/topic/23843)
